<resources>
    <string name="baidu_push_api_key">U8EB7WquN3HNM6Svt8GRY9ad</string>
    <string name="app_name">好车邦</string>
    <string name="temp_task">临时任务</string>
    <string name="action_Messages">消息提醒</string>
    <string name="action_settings">我的设置</string>
    <string name="action_notice_title">公司公告</string>
    <string name="action_ok">确定</string>
    <string name="provider_message">MessageProvider</string>
    <string name="provider_evaluatetask">EvaluateTaskProvider</string>
    <string name="provider_EvaluationProvider">TasksProvider</string>
    <string name="ctask_empty">无指定的验车任务!</string>
    <string name="accident_empty">无事故项</string>
    <string name="viewcar_title">看车任务详情</string>
    <string name="p_title_orgin_pwd">原  密  码</string>
    <string name="p_title_new_pwd">新  密  码</string>
    <string name="p_new_pwd">请输入新密码</string>
    <string name="p_title_new_pwd_again">确认密码</string>
    <string name="p_new_pwd_again">请再次输入新密码</string>
    <string name="p_appoint_time">预约时间 </string>
    <string name="p_checker">评估人 |</string>
    <string name="p_finish_time">完成时间 |</string>
    <string name="p_car_rating">综合评分 |</string>
    <string name="p_cancel_evaluation">取消验车</string>
    <string name="p_transmit">转给他人</string>
    <string name="p_creat_recycling">创建收车</string>
    <string name="p_modify_address">修改地点</string>
    <string name="p_navigation">任务导航</string>
    <string name="p_helpcheck_result">选择帮检结果</string>
    <string name="p_gearbox">变速箱 |</string>
    <string name="p_vehicle_source_id">车源编号</string>
    <string name="p_seller">车主</string>
    <string name="p_incharge_checker">评估人</string>
    <string name="p_final_price">成交价</string>
    <string name="p_service_pay_sub">应补差价</string>
    <string name="login">登录</string>
    <string name="call">呼叫</string>
    <string name="modify">修改</string>
    <string name="p_return">返回</string>
    <string name="change_pwd">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="p_appoint_comment">备注</string>
    <string name="send_comment">电寄备注</string>
    <string name="checker_comment">我的备注</string>
    <string name="yes">有</string>
    <string name="comment">备注</string>
    <string name="evaluate_procedure">评估-基本信息</string>
    <string name="action_engine">评估-发动机仓检查</string>
    <string name="action_surface">评估-外观检查</string>
    <string name="action_interior">评估-内饰检查</string>
    <string name="action_startup">评估-启动检测</string>
    <string name="action_seller_info">请评估-卖家信息</string>
    <string name="action_equipment">评估-设备检测</string>
    <string name="action_compre">评估-综合检测标签</string>
    <string name="hc_loading">加载中...</string>
    <string name="save_data_error">保存数据错误,请重试!</string>
    <string-array name="array_cancel_reason">
        <item>请选择取消原因</item>
        <item>事故车</item>
        <item>不符合验车标准</item>
        <item>车主拒绝验车</item>
        <item>车辆已出售</item>
        
        <item>自行重新预约</item>
        <item>车源重复</item>
        <item>电话确认车况有问题</item>
    </string-array>
    <string-array name="array_cancel_desc">
        <item>请选择取消说明</item>
        <item>过户超过5次</item>
        <item>1个月内由过户</item>
        <item>上牌时间超过8年</item>
        <item>外地牌</item>
    </string-array>
    <string name="p_cancel_reason">取消原因:</string>
    <string name="p_cancel_desc">取消说明:</string>
    <string name="p_select_cancel_desc">请选择:取消说明！</string>
    <string name="p_onsite_title">是否已上门:</string>
    <string name="p_change_reason">改约原因</string>
    <string name="cancel_task_success">取消成功</string>
    <string name="ya">是</string>
    <string name="n">否</string>
    <string name="p_title">取消验车原因</string>
    <string name="change_time_titile">改约时间</string>
    <string name="please_input_change_time">请输入重新预约的时间</string>
    <string name="select_transfer_time">选择过户时间</string>
    <string name="select_order_time">请选择预约时间</string>
    <string name="select_regist_time">请选择上牌时间</string>
    <string name="select_recheck_time">请选择复检时间</string>
    <string name="select_idle_start_time">请选择空闲起始时间</string>
    <string name="select_idle_end_time">请选择空闲结束时间</string>
    <string-array name="array_carnum">
        <item>京</item>
    </string-array>
    <string-array name="array_transfer_method">
        <item>过户方式</item>
    </string-array>
    <string-array name="array_letter">
        <item>请选择</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string-array name="array_brand">
        <item>请选择品牌</item>
    </string-array>
    <string-array name="array_days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="array_months">
        <item>月份</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="array_years">
        <item>年份</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string-array name="array_biansuqi">
        <item>请选择</item>
        <item>手动</item>
        <item>自动</item>
        <item>双离合</item>
        <item>手自一体</item>
        <item>无极变速</item>
    </string-array>
    <string-array name="emissions_standard">
        <item>请选择</item>
        <item>国二</item>
        <item>国三</item>
        <item>国四</item>
        <item>国五</item>
    </string-array>
    <string-array name="emissions_type">
        <item>请选择</item>
        <item>无</item>
        <item>L</item>
        <item>T</item>
    </string-array>
    <string name="soft_update_cancel">取消</string>
    <string name="save_report_error">保存报告失败，请重新填写完整报告</string>
    <string name="other_operating">如需其他操作请先点击右上角按键</string>
    <string-array name="array_transfer_counts">
        <item>次数</item>
        <item>0次</item>
        <item>1次</item>
        <item>2次</item>
        <item>3次</item>
        <item>4次</item>
        <item>5次</item>
        <item>6次</item>
        <item>7次</item>
        <item>8次</item>
        <item>9次</item>
    </string-array>
    <string name="carnum_tip">请填写车牌号</string>
    <string name="registe_tip">请填写登记时间</string>
    <string name="anualcheck_tip">请填写年检到期时间</string>
    <string name="trafficins_tip">请填写交强险到期时间</string>
    <string name="customins_tip">请填写商业保险到期时间</string>
    <string name="transrecord_tip">请确认最后过户时间已填写</string>
    <string name="trans_times_tip">请确认最后过户次数已填写</string>
    <string name="gearbox_tip">请选择变速箱</string>
    <string name="emission_tip">请确认排量信息填写完整，排量类型已选择</string>
    <string name="miles_tip">请确认表显里程已填写</string>
    <string name="price_tip">请填写车主报价</string>
    <string name="price_error_tip">车主报价格式不正确</string>
    <string name="address_tip">请填写看车地点</string>
    <string name="jobs_tip">请填写车主工作</string>
    <string name="buy_comment_tip">请填写购买信息</string>
    <string name="advantage_tip">请填写车辆优势</string>
    <string name="usage_tip">请填写车辆用途</string>
    <string name="maintainence_tip">请填写车辆保养状况</string>
    <string name="oil_consumption_tip">请填写车辆油耗</string>
    <string name="checker_comment_tip">请填写评估师评语</string>
    <string name="final_comment_tip">请填写评估师备注</string>
    <string name="final_whychange">请填写为什么有过户记录</string>
    <string name="final_carstory">请填写您的爱车故事</string>
    <string name="standby_number_error">备用号码有误</string>
    <string name="view_regist">请选择是否看到登记证</string>
    <string name="year_modle">请补全年份车款</string>
    <string name="chooese_drive_way">请选择驱动方式</string>
    <string name="displacement_format_error">排量信息格式错误！</string>
    <string name="mileage_format_error">里程信息格式错误！</string>
    <string name="vin_format_error">VIN码必须为17位！</string>
    <string-array name="engine_status">
        <item>正常</item>
        <item>轻微</item>
        <item>严重</item>
    </string-array>
    <string-array name="cover_status">
        <item>正常</item>
        <item>喷漆</item>
        <item>钣金</item>
        <item>更换</item>
    </string-array>
    <string-array name="outer_status">
        <item>正常</item>
        <item>划痕</item>
        <item>破损</item>
        <item>喷漆</item>
        <item>更换 </item>
    </string-array>
    <string name="sgcar_remark">事故车说明:</string>
    <string name="hint_remark">请填写事故车说明</string>
    <string name="hc_please_input_reservation">请输入自行重新预约的原因</string>
    <string name="hc_yuan">元</string>
    <string name="select_photo_show">请上传至少3张照片</string>
    <string name="modify_remark">修改备注</string>
    <string name="hc_call_record">听录音</string>
    <string name="hc_check_vehicle_maintenance_record">查保养记录</string>
    <string name="hc_task_remark">任务备注</string>
    <string name="hc_remark_content">请简单说明车主的时间和地点，或特殊需求</string>
    <string name="hc_check_task_note">注：线索在提交报告后创建并由地收经理统一分配，请及时上传报告</string>
    <string name="hc_commit_clue">提交线索</string>
    <string name="hc_is_tansfer">是否过户</string>
    <string name="hc_need_transfer">需要过户</string>
    <string name="hc_which_pay">哪方付费</string>
    <string name="hc_company_payment">公司支付</string>
    <string name="hc_owner_payment">车主支付</string>
    <string name="hc_transfer_fee">过户费用</string>
    <string name="hc_see_report">查看报告</string>
    <string name="hc_modify_info">修改信息</string>
    <string name="hc_modify_maintain">变更维护</string>
    <string name="hc_check_vehicle">查看车源</string>
    <string name="hc_check_merchant">查看商家</string>
    <string name="hc_update_price">调整报价</string>
    <string name="hc_invalid_formate">非回购，寄售车源</string>
    <string name="hc_invalid_qrcode_help">请在crm门店库存管理-库存盘点中下载正确盘点二维码</string>
    <string name="hc_repeat_scan">重新扫描</string>
    <string name="hc_qrcode_content">*二维码内容：</string>
    <string name="sell_reason">车主卖车原因</string>
    <string name="sell_time">预期卖车时间</string>
    <string name="sell_decider">卖车决定人</string>
    <string name="expected_price">车主预期售价</string>
    <string name="offer_price">同行最高报价</string>
    <string name="other">其他</string>
</resources>