<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/wh_mw"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/self_white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_15dp">

    <RadioGroup
        style="@style/wh_mw"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_check_report"
            style="@style/hc_tv_transaction_detail"
            android:drawableTop="@drawable/ic_report"
            android:text="@string/hc_see_report"
            />

        <RadioButton
            android:id="@+id/rb_check_merchant"
            style="@style/hc_tv_transaction_detail"
            android:drawableTop="@drawable/ic_vehicle_revisit"
            android:text="@string/hc_check_merchant"
            />

        <RadioButton
            android:id="@+id/rb_modify_price"
            style="@style/hc_tv_transaction_detail"
            android:drawableTop="@drawable/ic_vehicle_revisit"
            android:text="@string/hc_update_price"
            />
    </RadioGroup>

</LinearLayout>