<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/wh_mw"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/self_white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_15dp">

    <RadioGroup
        style="@style/wh_mw"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_check_comment"
            style="@style/hc_tv_transaction_detail"
            android:drawableTop="@drawable/ic_vehicle_revisit"
            android:text="@string/modify_remark"
            />

        <RadioButton
            android:id="@+id/rb_check_listen_record"
            style="@style/hc_tv_transaction_detail"
            android:drawableTop="@drawable/ic_call_record"
            android:text="@string/hc_call_record"
            />

        <RadioButton
            android:id="@+id/rb_check_query_vinrecord"
            style="@style/hc_tv_transaction_detail"
            android:drawableTop="@drawable/ic_vehicle_revisit"
            android:text="@string/hc_check_vehicle_maintenance_record"
            />
    </RadioGroup>

</LinearLayout>